dfir_rs/tests/compile-fail/surface_syntax_paren_missingop.stderr
error: unexpected end of input, expected one of: square brackets, `mod`, identifier, parentheses
 --> tests/compile-fail/surface_syntax_paren_missingop.rs:5:32
  |
5 |         (source_iter(0..10) -> );
  |                                ^
